# pulse

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Engine - Shortcut.lnk  NOTICE  Pulse.cmake  PulseC.cmake  PulseCLR.cmake  PulseCSharp.sln  PulseJNI.cmake  PulsePython.cmake  ReadMe.md  SuperBuild.cmake  dockcross.bat  dockcross.sh  dockerfile  pulse.epf  requirements.txt  xcompile.bat  xcompile.sh
schema/: .classpath  .project  CMakeLists.txt  DataModelBindings.csproj  DataModelBindings.nf.csproj  GenerateCDMBindings.cmake
schema/proto/cdm/: ActionEnums.proto  Actions.proto  AnesthesiaMachine.proto  AnesthesiaMachineActions.proto  AnesthesiaMachineEnums.proto  Circuit.proto  Compartment.proto  CompartmentEnums.proto  Conditions.proto  ElectroCardioGram.proto  ElectroCardioGramEnums.proto  Engine.proto  EngineEnums.proto  Enums.proto  Environment.proto  EnvironmentActions.proto  EnvironmentConditions.proto  EnvironmentEnums.proto  Events.proto  Inhaler.proto  InhalerActions.proto  Patient.proto  PatientActionEnums.proto  PatientActions.proto  PatientAssessmentEnums.proto  PatientAssessments.proto  PatientConditions.proto  PatientEnums.proto  PatientNutrition.proto  Physiology.proto  PhysiologyEnums.proto  Properties.proto  Scenario.proto  ScenarioEnums.proto  Substance.proto  SubstanceEnums.proto  SubstanceQuantity.proto  TestReport.proto
schema/proto/engine/: Engine.proto  EngineConfiguration.proto  EngineEnums.proto  EnginePhysiology.proto  EngineState.proto
schema/proto/pulse/: Pulse.proto  PulseConfiguration.proto  PulseEnums.proto  PulseEnvironment.proto  PulseEquipment.proto  PulsePhysiology.proto  PulseState.proto
sdk/: CMakeLists.txt  sdk.cmake
sdk/howto/cpp/: EngineHowTo.cpp  EngineHowTo.h  HowTo-AirwayObstruction.cpp  HowTo-AnesthesiaMachine.cpp  HowTo-Asthma.cpp  HowTo-BolusDrug.cpp  HowTo-BrainInjury.cpp  HowTo-COPD.cpp  HowTo-CPR.cpp  HowTo-CombatMultitrauma.cpp  HowTo-ConcurrentEngines.cpp  HowTo-ConsumeNutrients.cpp  HowTo-CreateAPatient.cpp  HowTo-EngineUse.cpp  HowTo-EnvironmentChange.cpp  HowTo-Exercise.cpp  HowTo-Hemorrhage.cpp  HowTo-LobarPneumonia.cpp  HowTo-MechanicalVentilation.cpp  HowTo-PulmonaryFibrosis.cpp  HowTo-PulmonaryFunctionTest.cpp  HowTo-RunScenario.cpp  HowTo-RunThreaded.cpp  HowTo-Sandbox.cpp  HowTo-SceanrioBase.cpp  HowTo-Serialize.cpp  HowTo-Smoke.cpp  HowTo-TensionPneumothorax.cpp  HowTo-TestSystemCapability.cpp
sdk/howto/csharp/: HowToDriver.csproj  HowTo_EngineUse.cs  HowTo_PatientStates.cs  HowTo_UseEngine.csproj  Program.cs
sdk/howto/csharp/Properties/: AssemblyInfo.cs
sdk/howto/csharp/c/: HowTo-UseC.csproj  HowTo-UseC.sln  HowTo_UseEngine.csproj  Program.cs
sdk/howto/python/: HowTo_UseEngine.py
src/c/: CMakeLists.txt  PulseEngineC.cpp
src/cpp/: CMakeLists.txt
src/cpp/bind/: CMakeLists.txt  files.cmake
src/cpp/cdm/: CMakeLists.txt  CommonDataModel.h  CommonDefs.h  Macros.h  PhysiologyEngine.h  PhysiologyEnginePool.cpp  PhysiologyEnginePool.h  PhysiologyEngineThunk.cpp  PhysiologyEngineThunk.h  files.cmake
src/cpp/cdm/blackbox/: SEBlackBox.cpp  SEBlackBox.h  SEBlackBoxManager.cpp  SEBlackBoxManager.h
src/cpp/cdm/circuit/: SECircuit.cpp  SECircuit.h  SECircuit.hxx  SECircuitCalculator.cpp  SECircuitCalculator.h  SECircuitManager.cpp  SECircuitManager.h  SECircuitManager.hxx  SECircuitNode.cpp  SECircuitNode.h  SECircuitNode.hxx  SECircuitPath.cpp  SECircuitPath.h  SECircuitPath.hxx
src/cpp/cdm/compartment/: SECompartment.h  (+14 more)
src/cpp/cpm/: CMakeLists.txt  PulseConfiguration.cpp  PulseConfiguration.h  PulsePhysiologyEngine.cpp  PulsePhysiologyEngine.h  PulsePhysiologyEnginePool.cpp  PulsePhysiologyEnginePool.h  PulsePhysiologySystems.h  PulseScenario.cpp  PulseScenario.h  PulseScenarioExec.cpp  PulseScenarioExec.h  stdafx.h
src/cpp/engine/: CMakeLists.txt  CommonDefs.h  PulseBuildInformation.cpp  PulseBuildInformation.h  PulseConfiguration.cpp  PulseConfiguration.h  PulseEngine.h  PulseEnginePool.cpp  PulseEnginePool.h  PulseEngineThunk.cpp  PulseEngineThunk.h  PulseScenario.cpp  PulseScenario.h  PulseScenarioExec.cpp  PulseScenarioExec.h  files.cmake
src/cpp/howto/: CMakeLists.txt  EngineHowTo.cpp  EngineHowTo.h  HowTo-ACLS.cpp  HowTo-AirwayObstruction.cpp  HowTo-AnesthesiaMachine.cpp  HowTo-Arrhythmia.cpp  HowTo-Asthma.cpp  HowTo-BagValveMask.cpp  HowTo-BolusDrug.cpp  HowTo-BrainInjury.cpp  HowTo-COPD.cpp  HowTo-COVID19Ventilated.cpp  HowTo-CPR.cpp  HowTo-CombatMultitrauma.cpp  HowTo-ConcurrentEngines.cpp  HowTo-ConsumeNutrients.cpp  HowTo-CreateAPatient.cpp  HowTo-ECMO.cpp  HowTo-EngineUse.cpp  HowTo-EnvironmentChange.cpp  HowTo-Exercise.cpp  HowTo-ExpandedVasculature.cpp  HowTo-Hemorrhage.cpp  HowTo-Hemothorax.cpp  HowTo-LobarPneumonia.cpp  HowTo-MechanicalVentilation.cpp  HowTo-MechanicalVentilator.cpp  HowTo-Pneumonia.cpp  HowTo-PulmonaryFibrosis.cpp  HowTo-PulmonaryFunctionTest.cpp  HowTo-PulseEnginePool.cpp  HowTo-RespiratoryMechanics.cpp  HowTo-RunScenario.cpp  HowTo-RunThreaded.cpp  HowTo-RunThreaded.h  HowTo-Sandbox.cpp  HowTo-SceanrioBase.cpp  HowTo-ScenarioBase.cpp  HowTo-ScenarioFromLog.cpp  (+5 more)
src/cpp/scenario_driver/: CMakeLists.txt  PulseScenarioDriver.cpp  PulseScenarioDriver.h
src/cpp/test/: CMakeLists.txt  main.cpp
src/cpp/test_driver/: CMakeLists.txt  main.cpp
src/csharp/: CMakeLists.txt  PulseCSharp.sln  PulseFiles.cmake
src/csharp/howto/: HowToDriver.csproj  HowTo_CreateState.cs  HowTo_DeathState.cs  HowTo_ECMO.cs  HowTo_EngineUse.cs  HowTo_Environment.cs  HowTo_Hemorrhage.cs  HowTo_Hemothorax.cs  HowTo_MechanicalVentilator.cs  HowTo_PatientStates.cs  HowTo_RespiratoryMechanics.cs  HowTo_RunScenarios.cs  HowTo_UseStates.cs  HowTo_VentilationMechanics.cs  Program.cs
src/csharp/pulse/: AssemblyInfo.cs  Pulse.csproj
src/java/: .classpath  .project  CMakeLists.txt  MANIFEST.MF  PulseFiles.cmake  eclipse_format.xml
src/java/jni/: CommonDataModelJNI.cpp  PulseEngineJNI.cpp  PulseEngineJNI.h
src/java/pulse/: SerializationType.java
src/python/: CMakeLists.txt  setup.py
src/python/pybind/: MultiplexVentilation.cpp  PhysiologyEngine.cpp  PulseEngines.cpp  PyPulse.cpp
(+4843 files in other folders)
