
add_executable_ex(HowToDriver
  howto/cpp/EngineHowTo.cpp
  howto/cpp/EngineHowTo.h
  howto/cpp/HowTo-AirwayObstruction.cpp
  howto/cpp/HowTo-AnesthesiaMachine.cpp
  howto/cpp/HowTo-Asthma.cpp
  howto/cpp/HowTo-BolusDrug.cpp
  howto/cpp/HowTo-BrainInjury.cpp
  howto/cpp/HowTo-ConcurrentEngines.cpp
  howto/cpp/HowTo-ConsumeNutrients.cpp
  howto/cpp/HowTo-COPD.cpp
  howto/cpp/HowTo-CPR.cpp
  howto/cpp/HowTo-CreateAPatient.cpp
  howto/cpp/HowTo-EngineUse.cpp
  howto/cpp/HowTo-EnvironmentChange.cpp
  howto/cpp/HowTo-Exercise.cpp
  howto/cpp/HowTo-Hemorrhage.cpp
  howto/cpp/HowTo-LobarPneumonia.cpp
  howto/cpp/HowTo-MechanicalVentilation.cpp
  howto/cpp/HowTo-PulmonaryFibrosis.cpp
  howto/cpp/HowTo-PulmonaryFunctionTest.cpp
  howto/cpp/HowTo-RunScenario.cpp
  howto/cpp/HowTo-RunThreaded.cpp
  howto/cpp/HowTo-RunThreaded.h
  howto/cpp/HowTo-Sandbox.cpp
  howto/cpp/HowTo-SceanrioBase.cpp
  howto/cpp/HowTo-Serialize.cpp
  howto/cpp/HowTo-Smoke.cpp
  howto/cpp/HowTo-TensionPneumothorax.cpp
  howto/cpp/HowTo-TestSystemCapability.cpp
)
target_link_libraries(HowToDriver PulseEngine)